tests/ui/scalable-vectors/invalid.stderr
error: allow, cfg, cfg_attr, deny, expect, forbid, and warn are the only allowed built-in attributes in function parameters
  --> $DIR/invalid.rs:110:11
   |
LL | fn barqux(#[rustc_scalable_vector(4)] _x: u32) {}
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `#[rustc_scalable_vector]` attribute cannot be used on extern crates
  --> $DIR/invalid.rs:10:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on use statements
  --> $DIR/invalid.rs:14:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on statics
  --> $DIR/invalid.rs:18:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on constants
  --> $DIR/invalid.rs:22:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on modules
  --> $DIR/invalid.rs:26:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on foreign modules
  --> $DIR/invalid.rs:31:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on foreign statics
  --> $DIR/invalid.rs:34:5
   |
LL |     #[rustc_scalable_vector(4)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on foreign types
  --> $DIR/invalid.rs:37:5
   |
LL |     #[rustc_scalable_vector(4)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on foreign functions
  --> $DIR/invalid.rs:40:5
   |
LL |     #[rustc_scalable_vector(4)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on type aliases
  --> $DIR/invalid.rs:45:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on enums
  --> $DIR/invalid.rs:49:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on type parameters
  --> $DIR/invalid.rs:51:10
   |
LL | enum Bar<#[rustc_scalable_vector(4)] T> {
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on enum variants
  --> $DIR/invalid.rs:53:5
   |
LL |     #[rustc_scalable_vector(4)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on struct fields
  --> $DIR/invalid.rs:59:5
   |
LL |     #[rustc_scalable_vector(4)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on unions
  --> $DIR/invalid.rs:64:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on traits
  --> $DIR/invalid.rs:71:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on associated types
  --> $DIR/invalid.rs:74:5
   |
LL |     #[rustc_scalable_vector(4)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on associated consts
  --> $DIR/invalid.rs:77:5
   |
LL |     #[rustc_scalable_vector(4)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on provided trait methods
  --> $DIR/invalid.rs:80:5
   |
LL |     #[rustc_scalable_vector(4)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on trait aliases
  --> $DIR/invalid.rs:85:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on inherent impl blocks
  --> $DIR/invalid.rs:89:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on inherent methods
  --> $DIR/invalid.rs:92:5
   |
LL |     #[rustc_scalable_vector(4)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on trait impl blocks
  --> $DIR/invalid.rs:97:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on macro defs
  --> $DIR/invalid.rs:104:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on functions
  --> $DIR/invalid.rs:108:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on function params
  --> $DIR/invalid.rs:110:11
   |
LL | fn barqux(#[rustc_scalable_vector(4)] _x: u32) {}
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on functions
  --> $DIR/invalid.rs:114:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on functions
  --> $DIR/invalid.rs:118:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on functions
  --> $DIR/invalid.rs:122:1
   |
LL | #[rustc_scalable_vector(4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on closures
  --> $DIR/invalid.rs:127:14
   |
LL |     let _x = #[rustc_scalable_vector(4)] || { };
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on expressions
  --> $DIR/invalid.rs:129:14
   |
LL |     let _y = #[rustc_scalable_vector(4)] 3 + 4;
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on statements
  --> $DIR/invalid.rs:131:5
   |
LL |     #[rustc_scalable_vector(4)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error: `#[rustc_scalable_vector]` attribute cannot be used on match arms
  --> $DIR/invalid.rs:136:9
   |
LL |         #[rustc_scalable_vector(4)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_scalable_vector]` can only be applied to structs

error[E0539]: malformed `rustc_scalable_vector` attribute input
  --> $DIR/invalid.rs:143:1
   |
LL | #[rustc_scalable_vector("4")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^---^^
   |                         |
   |                         expected an integer literal here
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[rustc_scalable_vector("4")]
LL + #[rustc_scalable_vector(count)]
   |
LL - #[rustc_scalable_vector("4")]
LL + #[rustc_scalable_vector]
   |

error[E0805]: malformed `rustc_scalable_vector` attribute input
  --> $DIR/invalid.rs:147:1
   |
LL | #[rustc_scalable_vector(4, 2)]
   | ^^^^^^^^^^^^^^^^^^^^^^^------^
   |                        |
   |                        expected a single argument here
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[rustc_scalable_vector(4, 2)]
LL + #[rustc_scalable_vector(count)]
   |
LL - #[rustc_scalable_vector(4, 2)]
LL + #[rustc_scalable_vector]
   |

error[E0539]: malformed `rustc_scalable_vector` attribute input
  --> $DIR/invalid.rs:151:1
   |
LL | #[rustc_scalable_vector(count = "4")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^-----------^^
   |                         |
   |                         expected an integer literal here
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[rustc_scalable_vector(count = "4")]
LL + #[rustc_scalable_vector(count)]
   |
LL - #[rustc_scalable_vector(count = "4")]
LL + #[rustc_scalable_vector]
   |

error: element count in `rustc_scalable_vector` is too large: `65536`
  --> $DIR/invalid.rs:155:1
   |
LL | #[rustc_scalable_vector(65536)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the value may not exceed `u16::MAX`

error: scalable vector structs can only have scalable vector fields
  --> $DIR/invalid.rs:163:18
   |
LL | struct OkayNoArg(f32);
   |                  ^^^

error: aborting due to 39 previous errors

Some errors have detailed explanations: E0539, E0805.
For more information about an error, try `rustc --explain E0539`.
